feat(errors): centralized exceptions handling